--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Pandas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM7Y/n720LjUrRbLG7L4Bko",
+      "authorship_tag": "ABX9TyMxBvTA2YtxHUKxAwimVh2j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# ***Pandas***\n",
+        "<h3> <b>Pandas <h3/>\n",
         "\n",
         "<h4 align=\"justify\">\n",
         "Além de animaizinhos simpáticos, Pandas também é uma biblioteca Python. Ela fornece ferramentas de análise de dados e estruturas de dados de alta performance e fáceis de usar.\n",
@@ -39,7 +39,7 @@
         "<h4/>\n",
         "\n",
         "<p align=\"center\">\n",
-        "##  <img width=\"380\" height=\"180\" src =\"https://res.cloudinary.com/practicaldev/image/fetch/s--Cdlxz2m5--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://proxy.duckduckgo.com/iu/%3Fu%3Dhttps%253A%252F%252Fmedia.giphy.com%252Fmedia%252FaUhEBE0T8XNHa%252Fgiphy.gif%26f%3D1\">\n",
+        " <img width=\"380\" height=\"180\" src =\"https://res.cloudinary.com/practicaldev/image/fetch/s--Cdlxz2m5--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://proxy.duckduckgo.com/iu/%3Fu%3Dhttps%253A%252F%252Fmedia.giphy.com%252Fmedia%252FaUhEBE0T8XNHa%252Fgiphy.gif%26f%3D1\">\n",
         "</p>\n",
         "\n"
       ]
