--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "Pandas.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMqALWalOZMmoaktTPoLQPC",
+      "authorship_tag": "ABX9TyPtCbjtaAIz0db1cf1S3rxX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<h3> <b>Pandas <h3/>\n",
+        "# Pandas\n",
         "\n",
         "<h4 align=\"justify\">\n",
         "Além de animaizinhos simpáticos, Pandas também é uma biblioteca Python. Ela fornece ferramentas de análise de dados e estruturas de dados de alta performance e fáceis de usar.\n",
