--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "Pandas.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpk/QKcD60R8uxSaJj8tjg",
+      "authorship_tag": "ABX9TyP78Ph7/9ejOdYcbI+tUUkJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,10 +35,9 @@
         "# Pandas\n",
         "\n",
         "\n",
-        "<h4 align=\"justify\">\n",
-        "Além de animaizinhos simpáticos, Pandas também é uma biblioteca Python. Ela fornece ferramentas de análise de dados e estruturas de dados de alta performance e fáceis de usar.\n",
-        "Pela praticidade e funcionalidade que essa ferramenta oferece se tornou uma das minha bibliotecas favoritas, mas também fundamental para Análise de Dados. \n",
-        "<h4/>\n",
+        "\n",
+        "#####  Além de animaizinhos simpáticos, Pandas também é uma biblioteca Python. Ela fornece ferramentas de análise de dados e estruturas de dados de alta performance e fáceis de usar. Pela praticidade e funcionalidade que essa ferramenta oferece se tornou uma das minha bibliotecas favoritas, mas também fundamental para Análise de Dados. \n",
+        "\n",
         "\n",
         "<p align=\"center\">\n",
         " <img width=\"380\" height=\"180\" src =\"https://res.cloudinary.com/practicaldev/image/fetch/s--Cdlxz2m5--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://proxy.duckduckgo.com/iu/%3Fu%3Dhttps%253A%252F%252Fmedia.giphy.com%252Fmedia%252FaUhEBE0T8XNHa%252Fgiphy.gif%26f%3D1\">\n",
