--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "Pandas.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP78Ph7/9ejOdYcbI+tUUkJ",
+      "authorship_tag": "ABX9TyNM0GUPFDgKrWlElOcg4q3T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "\n",
         "\n",
         "\n",
-        "#####  Além de animaizinhos simpáticos, Pandas também é uma biblioteca Python. Ela fornece ferramentas de análise de dados e estruturas de dados de alta performance e fáceis de usar. Pela praticidade e funcionalidade que essa ferramenta oferece se tornou uma das minha bibliotecas favoritas, mas também fundamental para Análise de Dados. \n",
+        "Além de animaizinhos simpáticos, Pandas também é uma biblioteca Python. Ela fornece ferramentas de análise de dados e estruturas de dados de alta performance e fáceis de usar. Pela praticidade e funcionalidade que essa ferramenta oferece se tornou uma das minha bibliotecas favoritas, mas também fundamental para Análise de Dados. \n",
         "\n",
         "\n",
         "<p align=\"center\">\n",
