Add mais funções

--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Pandas.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNM0GUPFDgKrWlElOcg4q3T",
+      "authorship_tag": "ABX9TyN+7O0whLxQYOwIkzMfTFPV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +56,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +96,7 @@
         "\n",
         "data_frame_dict = pd.DataFrame(data=dicionario)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +129,7 @@
       "source": [
         "data_frame_csv_local =pd.read_csv('data.csv')  "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +152,7 @@
       "source": [
         "data_frame_csv_nuvem =pd.read_csv('https://raw.githubusercontent.com/SamuelSSan28/Collab_Experimento/master/corrente_dia_16_12_2019.csv')  "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,17 +174,17 @@
       "metadata": {
         "id": "rgJwNJ4qcFoO",
         "colab_type": "code",
-        "outputId": "702bf5f3-a037-40d2-c1eb-ec2c72ef7137",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "702bf5f3-a037-40d2-c1eb-ec2c72ef7137"
       },
       "source": [
         "# o padrão do método head são as 5 primeiras linhas. Mas pode ser alterado de acordo com a necessidade.\n",
         "data_frame_dict.head()"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,17 +279,17 @@
       "metadata": {
         "id": "HiVxsahCdBhn",
         "colab_type": "code",
-        "outputId": "cd855aa3-5411-46bb-a7fe-ef9c50830334",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "cd855aa3-5411-46bb-a7fe-ef9c50830334"
       },
       "source": [
         "data_frame_csv_local.shape\n",
         "#(Linhas,Colunas)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,16 +320,16 @@
       "metadata": {
         "id": "Uk2T72O-gOWN",
         "colab_type": "code",
-        "outputId": "d32f8443-3c83-4c78-c7de-0d6abbbe470a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "d32f8443-3c83-4c78-c7de-0d6abbbe470a"
       },
       "source": [
         "data_frame_csv_local.columns"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +369,7 @@
       "source": [
         "data_frame_dict.isnull()"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,16 +478,16 @@
       "metadata": {
         "id": "BufROYb9g14L",
         "colab_type": "code",
-        "outputId": "b807f6eb-14a5-46c8-81b4-3635fb543bb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "outputId": "b807f6eb-14a5-46c8-81b4-3635fb543bb1"
       },
       "source": [
         "data_frame_csv_local.describe()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +621,7 @@
       "source": [
         "data_frame_dict.mean()"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -663,7 +664,7 @@
       "source": [
         "data_frame_csv_local.corr()"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -756,17 +757,17 @@
       "metadata": {
         "id": "SnwMQhj_hp4k",
         "colab_type": "code",
-        "outputId": "49b937ab-a6a8-4b44-b3f6-c52fe6c9d066",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "outputId": "49b937ab-a6a8-4b44-b3f6-c52fe6c9d066"
       },
       "source": [
         "data_frame_dict.drop_duplicates(inplace=True) #inplace=True\n",
         "data_frame_dict"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,17 +869,17 @@
       "metadata": {
         "id": "R1P7OW3xhIm4",
         "colab_type": "code",
-        "outputId": "64a59360-c7c4-428b-e541-4b6094f56324",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "64a59360-c7c4-428b-e541-4b6094f56324"
       },
       "source": [
         "data_frame_dict.dropna(axis=0,inplace=True)\n",
         "data_frame_dict"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -973,17 +974,17 @@
       "metadata": {
         "id": "GCuBcDJGli7m",
         "colab_type": "code",
-        "outputId": "ee8f73f9-1379-4f1a-ce72-e25a9b661066",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "ee8f73f9-1379-4f1a-ce72-e25a9b661066"
       },
       "source": [
         "data_frame_dict.rename(columns={'A': 'altura', 'B':'peso', 'C':'largura'},inplace=True)\n",
         "data_frame_dict"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1087,7 +1088,7 @@
       "source": [
         "data_frame_csv_local[\"class\"].value_counts()"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1136,7 +1137,7 @@
         "\n",
         "data_frame_join"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1231,6 +1232,29 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "8rleMwjRzrEb",
+        "colab_type": "text"
+      },
+      "source": [
+        "Exportar um dataframe no formato csv\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QiA8Ujzkzv_h",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data_frame_dict.to_csv(r\"data_frame_dict.csv\" ,index = False, header=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "19JGsBhqN1XS",
         "colab_type": "text"
       },
@@ -1262,7 +1286,7 @@
       "source": [
         "data_frame_dict.query('altura > 2')"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1342,7 +1366,7 @@
       "source": [
         "data_frame_dict.query('altura > 2 and largura < 20')"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1418,7 +1442,7 @@
       "source": [
         "data_frame_dict.sort_values(\"peso\", ascending=False)# dependendo do tamnaho da base é bom utilizar .head(15)"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1523,7 +1547,7 @@
         "mask = data_frame_dict[\"altura\"] > 3\n",
         "mask"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1558,7 +1582,7 @@
       "source": [
         "data_frame_dict[mask]"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1656,7 +1680,7 @@
       "source": [
         "data_frame_join[[\"altura\",\"IMC\",\"peso\"]].plot()"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1709,7 +1733,7 @@
       "source": [
         "data_frame_join[[\"altura\"]].plot(kind=\"hist\", title=\"Altura\")"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1762,7 +1786,7 @@
       "source": [
         "data_frame_dict.plot(kind='bar')"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1815,7 +1839,7 @@
       "source": [
         "data_frame_dict.plot.box()"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
